# craftinginterpreters_HONK

./: .gitignore  CMakeLists.txt  Makefile  README.md  linecount.sh  test.honk
external_tools/sublime_text/: honk.sublime-syntax
samples/: all-features.honk  feature-test.honk
samples/bugs/: class_field_declarations_invalid.honk  class_field_declarations_valid.honk  instance_pass_by_reference.honk  shadowing.honk
src/: Interpreter.cpp  Interpreter.hpp  Util.cpp  Util.hpp  main.cpp
src/AST/: Callable.cpp  Callable.hpp  Expr.cpp  Expr.hpp  ExprFwd.hpp  Parser.cpp  Parser.hpp  PrettyPrinter.cpp  PrettyPrinter.hpp  Stmt.cpp  Stmt.hpp  StmtFwd.hpp  Value.cpp  Value.hpp
src/AST/Visitors/: Evaluator.cpp  Evaluator.hpp  PrettyPrinter.cpp  PrettyPrinter.hpp
src/Evaluator/: Class.cpp  Class.hpp  ClassInstance.cpp  ClassInstance.hpp  DiagnosticsTokenTracker.cpp  DiagnosticsTokenTracker.hpp  Errors.hpp  Evaluator.cpp  Evaluator.hpp  Function.cpp  Function.hpp  StandardLibrary.cpp  StandardLibrary.hpp  VariableBucket.cpp  VariableBucket.hpp
src/Lexer/: Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp  TokenLiteral.cpp  TokenLiteral.hpp
src/Resolver/: ContextTrackers.cpp  ContextTrackers.hpp  Resolver.cpp  Resolver.hpp
src/Util/: Container.hpp  Misc.cpp  Misc.hpp  ScopeGuard.cpp  ScopeGuard.hpp  Type_attr.hpp  Util.hpp
